[package]
name = "mm_music_tui"
version = "0.9.0"
edition = "2021"
authors = ["Manuel <yekayama@gmail.com>"]
description = "A simple music TUI application. Supports a basic library stored in the home directory, downloads songs via yt-dlp, and has a TUI while playing"
license = "MIT"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.29.0"
rodio = "0.19.0"
serde = {version="1.0.214", features=["derive"]}
serde_json = "1.0.132"
